tests/errors/multifile/include/skip_file/main.c
#include "lib1.h"


void main()
{
	
}
